# AsFem

./: .CMakeLists.txt.swp  .gitignore  404.html  CMakeLists.txt  Doxyfile  Gemfile  README.md  SourceCode.cmake  Test.cmake  _config-theme-backup.yml  _config.next.yml  _config.yml  about.md  clean.py  db.json  index.html  index.md  mkdocs.yml  package-lock.json  package.json  paper.bib  paper.md  sitemap.xml
deprecated/: CMakeLists.txt
deprecated/include/: Welcome.h
deprecated/include/BCs/: BCBlock.h  BCSystem.h
deprecated/include/DofHandler/: DofHandler.h
deprecated/include/ElmtSystem/: ElmtBlock.h  ElmtSystem.h  ElmtType.h
deprecated/include/EquationSystem/: EquationSystem.h
deprecated/include/FE/: FE.h  QPBlockInfo.h  QPoint.h  ShapeFun.h
deprecated/include/FEProblem/: FECtrlInfo.h  FEJobType.h  FEProblem.h
deprecated/include/FESystem/: FESystem.h
deprecated/include/ICs/: ICBlock.h  ICSystem.h  ICType.h
deprecated/include/InputSystem/: InputSystem.h
deprecated/include/LinearSolver/: LinearSolver.h  LinearSolverBlockInfo.h  LinearSolverType.h
deprecated/include/MaterialSystem/: MaterialBlock.h  MaterialSystem.h  MaterialType.h
deprecated/include/Mesh/: Mesh.h  MeshTypeDefine.h  Nodes.h  Point.h
deprecated/include/MessagePrint/: MessagePrint.h
deprecated/include/NonLinearSolver/: NonLinearSolver.h  NonLinearSolverBlockInfo.h  NonLinearSolverType.h
deprecated/include/OutputSystem/: OutputSystem.h
deprecated/include/SolutionSystem/: SolutionSystem.h
deprecated/include/TimeStepping/: TimeStepping.h  TimeSteppingType.h
deprecated/include/Utils/: MathUtils.h  RankFourTensor.h  RankTwoTensor.h  StringUtils.h
deprecated/scripts/: clean.py
deprecated/src/: main.cpp
deprecated/src/BCs/: AddBCBlock.cpp  ApplyBC.cpp  ApplyDirichletBC.cpp  ApplyNeumannBC.cpp  ApplyPreSetDirichletBC.cpp  ApplyPresetBC.cpp  BCSystem.cpp  Init.cpp  PrintBCBlockInfo.cpp
deprecated/src/DofHandler/: CreateDofMap.cpp  DofHandler.cpp  DofHandlerPrinter.cpp  DofHandlerSettings.cpp  Init.cpp  ModifyDofActiveMapViaBC.cpp
deprecated/src/ElmtSystem/: AddElmtBlock.cpp  CahnHilliard.cpp  Diffusion.cpp  ElmtSystem.cpp  LinearElasticPhaseFieldFracture.cpp  Mechanics.cpp  Poisson.cpp  PrintElmtBlockInfo.cpp  RunElmtLib.cpp  ThermalMechanics.cpp  UserElmt1.cpp  Wave.cpp
deprecated/src/EquationSystem/: CreateSparsityPatterns.cpp  EquationSystem.cpp  InitEquationSystem.cpp
deprecated/src/FE/: FE.cpp  InitFE.cpp
deprecated/src/FEProblem/: CheckInputFileInfo.cpp  FEProblem.cpp  Finalize.cpp  InitFEProblem.cpp  PreRunFEProblem.cpp  PrintJobInfo.cpp  ReadInputFile.cpp  RunFEAnalysis.cpp  RunFEProblem.cpp  RunStaticAnalysis.cpp  RunTransientAnalysis.cpp  StartJob.cpp
deprecated/src/FESystem/: AssembleLocalHistToGlobal.cpp  AssembleLocalToGlobal.cpp  FESystem.cpp  FormFE.cpp  InitFESystem.cpp  PrintFESystemInfo.cpp  Projection.cpp
deprecated/src/ICs/: AddICBlock.cpp  ApplyCircleIC.cpp  ApplyConstIC.cpp  ApplyIC.cpp  ApplyRandIC.cpp  ICSystem.cpp  PrintICBlockInfo.cpp
deprecated/src/InputSystem/: InitInputSystem.cpp  InputSystem.cpp  ReadBCBlock.cpp  ReadDofsBlock.cpp  ReadElmtBlock.cpp  ReadICBlock.cpp  ReadInputFile.cpp  ReadJobBlock.cpp  ReadLinearSolverBlock.cpp  ReadMateBlock.cpp  ReadMeshBlock.cpp  ReadNonLinearSolverBlock.cpp  ReadProjectionBlock.cpp  ReadQpBlock.cpp
deprecated/src/LinearSolver/: InitLinearSolver.cpp  LinearSolver.cpp  LinearSolverGetInfo.cpp  PrintSolverInfo.cpp  Solve.cpp
deprecated/src/MaterialSystem/: AddMaterialBlock.cpp  CahnHilliardMate.cpp  ConstDiffusionMate.cpp  ConstPoissonMate.cpp  FiniteStrainMate.cpp  GenralWaveMate.cpp  LinearElasticMate.cpp  LinearElasticPhaseFieldFracMate.cpp  MaterialSystem.cpp  ModifyElasticFracMate.cpp  NeoHookeanMate.cpp  NonlinearDiffusionMate.cpp  NonlinearPoissonMate.cpp  PrintMateBlockInfo.cpp  RunMateLib.cpp  SaintVenantMate.cpp  ThermalElasticMate.cpp  UserMate1.cpp
deprecated/src/Mesh/: Create1DMesh.cpp  Create2DMesh.cpp  Create3DMesh.cpp  CreateMesh.cpp  GetGmshInfo.cpp  Mesh.cpp  PrintMeshInfo.cpp  ReadMeshFromGmsh.cpp  SaveMesh.cpp  SetMeshElmtInfo.cpp
deprecated/src/NonLinearSolver/: ConvergenceCheck.cpp  InitNonlinearSolver.cpp  Linear.cpp  NewtonRaphson.cpp  NewtonRaphsonModify.cpp  NewtonRaphsonWithBisectionLineSearch.cpp  NewtonRaphsonWithLineSearch.cpp  NewtonRaphsonWithRegulaFalsiLineSearch.cpp  NonLinearSolve.cpp  NonLinearSolver.cpp  PrintIterationInfo.cpp  PrintNonLinearSolverInfo.cpp
deprecated/src/OutputSystem/: InitOutputStream.cpp  OutputSystem.cpp  WriteResultToVTU.cpp
deprecated/src/SolutionSystem/: SolutionSystem.cpp  SolutionSystemInit.cpp  UpdateSolution.cpp
deprecated/src/TimeStepping/: BackwardEuler.cpp  BackwardEulerAD.cpp  CrankNicolson.cpp  CrankNicolsonAD.cpp  InitTimeStepping.cpp  RunTimeStepping.cpp  TimeStepping.cpp
deprecated/tests/diffusion/: edge2.i  edge3.i  edge3_ad.i  edge3_cn.i  edge3_rand.i  edge3_umat1.i  edge3_umat1_eq.i  edge4.i  quad4_flux.i  quad8_flux.i
deprecated/tests/input/: test.i  test1dmesh.i  test2dmesh.i  test3dmesh.i  testbc.i  testelmt.i  testic.i  testmate.i
deprecated/tests/mechanics/: circle.geo  circle.msh  circle_dynamic.i  circle_linear.i  hex8_neo.i  quad4_finite.i  quad4_finite_dy.i  quad4_fs.i  quad4_linear.i  quad4_neo.i  quad8_linear.i  quad9_fs.i  quad9_linear.i  quad9_neo.i  quad9_sv.i  uel1_ngeo.i
deprecated/tests/phasefield/: circle.geo  circle.msh  edge3_rand.i  edge3_randad.i  quad4.i  quad4_ad.i  quad8_ad.i  quad9.i  tri3_gmsh.i
deprecated/tests/phasefieldfracture/: rect.geo  rect.msh  rect_tensile.i  rect_tensile_m.i
deprecated/tests/poisson/: edge2.i  edge3.i  edge4.i  hex20.i  hex20_test.i  hex20m1.i  hex27.i  hex27_nl.i  hex8.i  hex8_nl.i  hex8_test.i  quad4.i  quad4_all.i  quad4_neumann.i  quad4_nonlinear.i  quad8.i  quad8_neumann.i  quad9.i  quad9_neuman_nl.i  quad9_neumann.i  quad9_nonlinear.i
deprecated/tests/thermal/: hex8_flux.i  quad9_flux.i
deprecated/tests/thermalmech/: hex8_flux.i  quad4_flux.i
deprecated/tests/wave/: edge3_m1.i  edge4_m2.i  quad4_m1.i  (+3 more)
tests/vector/: CMakeLists.txt  test.cpp
(+1653 files in other folders)
